--- a/le_journal_des_entreprises/html/intro.html
+++ b/le_journal_des_entreprises/html/intro.html
@@ -1,36 +1,23 @@
 
 
-<script type="text/javascript" src="js/Parallax/side-nav.js"              ></script>
-<script type="text/javascript" src="js/Parallax/backgrounds.js"           ></script>
-<script type="text/javascript" src="js/Parallax/kinetics.js"              ></script>
-<script type="text/javascript" src="js/Parallax/parallax.js"           ></script>
 
-<div id="mock-scroller"></div>
-	<ul id="nav"></ul>
-
-	<div id="content">
-		<section id="story-im1" anim-pause="1000">
-			<img class="bg animate" src="images/la1.png" anim-detached="true" />
-			<div class="story">
-				<div>
-					<h2>Background parallax + Pause</h2>
-					<p>
-						You'll notice that this page "locks" for a while.  This feature is optional and the pause length can be controlled.
-					</p>
-				</div>
-			</div>
-		</section>
-
-
-		<section id="story-im2">
-			<img class="bg animate" src="images/la2.png" anim-detached="true" />
-			<div class="story">
-				<div>
-					<h2>Background parallax</h2>
-					<p>
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque vehicula aliquam eros a tempus. Aenean sodales dictum augue, in faucibus nisi sollicitudin eu. Quisque et urna lacus, quis aliquam purus. Nulla semper arcu vel diam auctor condimentum. Nam molestie sem eu quam fermentum a tempus nisi aliquet. Maecenas sit amet tincidunt elit. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla facilisi. Nulla facilisi. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Fusce nec ipsum ac mauris imperdiet luctus sed vitae ligula. Phasellus nec hendrerit neque.
-					</p>
-				</div>
-			</div>
-		</section>
+<div id="intro">
+	<div id="intropage1" >
+	    
 	</div>
+	
+	<div id="intropage2" >
+	    
+	</div>
+	
+	<div id="bottomControl" class="control center" style="width:145px;left:45%;bottom:0px;">
+		<img id="bottomArrow" class="arrow left" style="height:60px" src="/images/arrowbottom2.png"></img>
+		<div id="bottomText" class="dirText txtcenter" ></div>
+
+	</div>
+	<div id="topControl" class="control center" style="width:145px;left:45%;">
+		<img id="topArrow" class="arrow left" style="height:60px" src="/images/arrowtop2.png"></img>
+		<div id="topText" class="dirText txtcenter" ></div>
+	</div>
+</div>
+	
