--- a/le_journal_des_entreprises/html/layout.html
+++ b/le_journal_des_entreprises/html/layout.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <title>Le journal des entreprises</title>
+    <link rel="stylesheet" href="./css/stylesheet.css" type="text/css" />
+    <link rel="stylesheet" href="./css/bootstrap.min.css" type="text/css" />
 </head>
 <body>
     
@@ -10,6 +12,8 @@
     {% include "./comparatif.html" %}
     {% include "./outro.html" %}
     
-    <script src="js/battle.js"></script>
+    <script type="text/javascript" src="./js/battle.js"></script>
+    <script type="text/javascript" src="./js/jquery-1.11.1.js"></script>
+    <script type="text/javascript" src="./js/bootstrap.js"></script>
 </body>
 </html>
