--- a/le_journal_des_entreprises/html/layout.html
+++ b/le_journal_des_entreprises/html/layout.html
@@ -2,8 +2,8 @@
 <html>
 <head>
     <title>Le journal des entreprises</title>
+    <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css" type="text/css" />
     <link rel="stylesheet" href="./css/stylesheet.css" type="text/css" />
-    <link rel="stylesheet" href="./css/bootstrap.min.css" type="text/css" />
     <link rel="stylesheet" type="text/css" href="/css/styleintro.css" />
 
 </head>
