add columns in comparison

--- a/le_journal_des_entreprises/html/layout.html
+++ b/le_journal_des_entreprises/html/layout.html
@@ -8,12 +8,12 @@
 
 </head>
 <body>
-    
-    {% include "./intro.html" %}
-    {% include "./dataviz1.html" %}
-    {% include "./comparatif.html" %}
-    {% include "./outro.html" %}
-    
+    <!--<div class="container-fluid">-->
+        {% include "./intro.html" %}
+        {% include "./dataviz1.html" %}
+        {% include "./comparatif.html" %}
+        {% include "./outro.html" %}
+    <!--</div>-->
     <script type="text/javascript" src="/bootstrap/dist/bootstrap.min.js"></script>
     <script type="text/javascript" src="/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="/js/parallax.min.js"></script>
