add tab dataviz layout

--- a/le_journal_des_entreprises/html/comparatif.html
+++ b/le_journal_des_entreprises/html/comparatif.html
@@ -1,10 +1,103 @@
 <div id="comparison">
-    <div class="row">
-        <div class="well col-xs-6 col-md-6 col-lg-6">
-            Ville 1
-        </div>
-        <div class="well col-xs-6 col-md-6 col-lg-6">
-            Ville 2lala
-        </div>
-    </div>
+	<div id="wrapper">
+		<div id="sidebar-wrapper">
+			<h2>Toolbox</h2>
+            <div class="panel-group sidebar-nav" id="accordion" role="tablist" aria-multiselectable="true">
+			 <div class="panel panel-default">
+			    <div class="panel-heading" role="tab" id="headingOne">
+			      <h5 class="panel-title">
+			        <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+			          Choix des villes
+			        </a>
+			      </h5>
+			    </div>
+			    <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+			      <div class="panel-body townChoice">
+			      	<div class=" col-xs-4">
+			      		<ul class="list-unstyled">
+				       		<li class="townLabel1">Marseille</li>
+	                    	<li class="townLabel1">Grenoble</li>
+	                    	<li class="townLabel1">Montpellier</li>
+	                    	<li class="townLabel1">Lille</li>
+	                    	<li class="townLabel1">Lyon</li>
+	                    	<li class="townLabel1">Rennes</li>
+	                    	<li class="townLabel1">Nantes</li>
+	                    	<li class="townLabel1">Bordeaux</li>
+	                    	<li class="townLabel1">Toulouse</li>
+	                    </ul>
+                    </div>
+                    <div class="col-xs-4 col-xs-offset-2">
+                    	<ul class="list-unstyled">
+				       		<li class="townLabel2">Marseille</li>
+	                    	<li class="townLabel2">Grenoble</li>
+	                    	<li class="townLabel2">Montpellier</li>
+	                    	<li class="townLabel2">Lille</li>
+	                    	<li class="townLabel2">Lyon</li>
+	                    	<li class="townLabel2">Rennes</li>
+	                    	<li class="townLabel2">Nantes</li>
+	                    	<li class="townLabel2">Bordeaux</li>
+	                    	<li class="townLabel2">Toulouse</li>
+	                    </ul>
+                    </div>
+			      </div>
+			    </div>
+			  </div>
+			  <div class="panel panel-default">
+			    <div class="panel-heading" role="tab" id="headingTwo">
+			      <h5 class="panel-title">
+			        <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+			          Choix de l'année
+			        </a>
+			      </h5>
+			    </div>
+			    <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+			      <div class="panel-body">
+				    <input type="text" class="span2" value="" data-slider-min="2008" data-slider-max="2014" data-slider-step="1" data-slider-value="2008"  id="sl1" >
+			      </div>
+			    </div>
+			  </div>
+			  <div class="panel panel-default">
+			    <div class="panel-heading" role="tab" id="headingThree">
+			      <h5 class="panel-title">
+			        <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+			          Critères
+			        </a>
+			      </h5>
+			    </div>
+			    <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+			      <div class="panel-body" role="group">
+			        	<button class="btn btn-default">NAF 1</button>
+                    	<button class="btn btn-default">NAF 2</button>
+                    	<button class="btn btn-default">NAF 3</button>
+                    	<button class="btn btn-default">NAF 4</button>
+                    	<button class="btn btn-default">NAF 5</button>
+                    	<button class="btn btn-default">NAF 6</button>
+                    	<button class="btn btn-default">NAF 7</button>
+                    	<button class="btn btn-default">NAF 8</button>
+                    	<button class="btn btn-default">NAF 9</button>
+			      </div>
+			    </div>
+			  </div>
+			</div>
+        </div><!-- #sidebar-wrapper-->
+
+	    <div id="page-content-wrapper">
+	    	<a href="#menu-toggle" class="btn btn-default" id="menu-toggle">
+	    		<span class="glyphicon glyphicon-align-justify"></span>
+	    	</a>
+	    	<div class="row">
+		        <div class="city col-xs-6 col-md-6 col-lg-6">
+		            <div class="well col-md-offset-1 col-md-10">
+		            	<h4 id="city1">Ville 1</h4>
+		            </div>
+		        </div>
+		        <div class="city col-xs-6 col-md-6 col-lg-6">
+		            <div class="well col-md-offset-1 col-md-10">
+		           		<h4 id="city2">Ville 2</h4>
+		           	</div>
+		        </div>
+		    </div>
+	    </div><!-- #page-content-wrapper"-->
+
+	</div><!-- #wrapper -->
 </div>
