sidebar and slider css

--- a/le_journal_des_entreprises/html/layout.html
+++ b/le_journal_des_entreprises/html/layout.html
@@ -3,7 +3,8 @@
 <head>
     <title>Le journal des entreprises</title>
     <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css" type="text/css" />
-    <link rel="stylesheet" href="./css/stylesheet.css" type="text/css" />
+    <link rel="stylesheet" href="/css/sidebar.css" type="text/css" />
+    <link rel="stylesheet" href="/css/slider.css" type="text/css" />
     <link rel="stylesheet" type="text/css" href="/css/styleintro.css" />
 
 </head>
@@ -17,6 +18,7 @@
     <script type="text/javascript" src="/bootstrap/dist/bootstrap.min.js"></script>
     <script type="text/javascript" src="/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="/js/parallax.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap-slider.js"></script>
     <script type="text/javascript" src="/js/intro.js"></script>
     <script type="text/javascript" src="./js/battle.js"></script>
 
