--- a/le_journal_des_entreprises/html/layout.html
+++ b/le_journal_des_entreprises/html/layout.html
@@ -15,12 +15,12 @@
         {% include "./comparatif.html" %}
         {% include "./outro.html" %}
     <!--</div>-->
-    <script type="text/javascript" src="/bootstrap/dist/bootstrap.min.js"></script>
     <script type="text/javascript" src="/jquery/dist/jquery.min.js"></script>
+    <script type="text/javascript" src="/bootstrap/dist/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="/js/parallax.min.js"></script>
-    <script type="text/javascript" src="js/bootstrap-slider.js"></script>
+    <script type="text/javascript" src="/js/bootstrap-slider.js"></script>
     <script type="text/javascript" src="/js/intro.js"></script>
-    <script type="text/javascript" src="./js/battle.js"></script>
+    <script type="text/javascript" src="/js/battle.js"></script>
 
 </body>
 </html>
