parallax + scroll auto fonctionnel

--- a/le_journal_des_entreprises/html/intro.html
+++ b/le_journal_des_entreprises/html/intro.html
@@ -1,20 +1,23 @@
-<div id="intro">
-	<div id="intropage1" >
-	    
-	</div>
-	
-	<div id="intropage2" >
-	    
-	</div>
-	
-	<div id="bottomControl" class="control center" style="width:145px;left:45%;bottom:0px;">
-		<img id="bottomArrow" class="arrow left" style="height:60px" src="/images/arrowbottom2.png"></img>
-		<div id="bottomText" class="dirText txtcenter" ></div>
-
-	</div>
-	<div id="topControl" class="control center" style="width:145px;left:45%;">
-		<img id="topArrow" class="arrow left" style="height:60px" src="/images/arrowtop2.png"></img>
-		<div id="topText" class="dirText txtcenter" ></div>
-	</div>
 </div>
+
+    <div id="slide1" class="page">
+    	<img src="/images/logo.png" alt="le battle du numérique"/>
+        <div class="slide_inside">					
+			
+		
+			
+		</div>
+		
+		<a id="nav1" class="bottomControl" title="Next Section" href="#slide2">
+			<img class="bottomArrow" src="/images/arrowbottom2.png"></img>
+		</a>
+    </div>
+
+    <div id="slide2" class="page">
+        <div class="slide_inside">					
+			
+		
+			
+		</div>
 	
+    </div>
