--- a/le_journal_des_entreprises/html/layout.html
+++ b/le_journal_des_entreprises/html/layout.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Le journal des entreprises</title>
     <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css" type="text/css" />
-    <link rel="stylesheet" href="./css/stylesheet.css" type="text/css" />
     <link rel="stylesheet" type="text/css" href="/css/styleintro.css" />
 
 </head>
@@ -15,10 +15,13 @@
         {% include "./outro.html" %}
     <!--</div>-->
     <script type="text/javascript" src="/bootstrap/dist/bootstrap.min.js"></script>
-    <script type="text/javascript" src="/jquery/dist/jquery.min.js"></script>
-    <script type="text/javascript" src="/js/parallax.min.js"></script>
-    <script type="text/javascript" src="/js/intro.js"></script>
-    <script type="text/javascript" src="./js/battle.js"></script>
+    <script type="text/javascript" src="/jquery/dist/jquery.min.js"></script>     
+    <script type="text/javascript" src="/js/parallax.js"></script>
+    <script type="text/javascript" src="/js/jquery.localscroll-min.js"></script>
+	<script type="text/javascript" src="/js/jquery.scrollTo-min.js"></script>
+ 
+    <script type="text/javascript" src="/js/scroll.js"></script>
+    <script type="text/javascript" src="/js/battle.js"></script>
 
 </body>
 </html>
