Ajax request for town querying

--- a/le_journal_des_entreprises/html/comparatif.html
+++ b/le_journal_des_entreprises/html/comparatif.html
@@ -2,135 +2,207 @@
 	<div id="wrapper">
 		<div id="sidebar-wrapper">
 			<h2>Toolbox</h2>
-            <div class="panel-group sidebar-nav" id="accordion" role="tablist" aria-multiselectable="true">
-			 <div class="panel panel-default">
-			    <div class="panel-heading" role="tab" id="headingOne">
-			      <h5 class="panel-title">
+			<div class="panel-group sidebar-nav" id="accordion" role="tablist" aria-multiselectable="true">
+				<div class="panel panel-default">
+					<div class="panel-heading" role="tab" id="headingOne">
+						<h5 class="panel-title">
 			        <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
 			          Choix des villes
 			        </a>
 			      </h5>
-			    </div>
-			    <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
-			      <div class="panel-body townChoice">
-			      	<div class="towns" data-toggle="buttons">
-			      		<label id="Marseille" class="btn btn-default active">
-			        		<input class="townLabel" name="townLabel" type="checkbox" autocomplete="off" checked> Marseille 
-			        	</label>
-                    	<label id="Grenoble" class="btn btn-default">
-                    		<input class="townLabel" name="townLabel" type="checkbox" autocomplete="off"> Grenoble
-                    	</label>
-                    	<label id="Montpellier" class="btn btn-default">
-                    		<input class="townLabel" name="townLabel" type="checkbox" autocomplete="off"> Montpellier
-                    	</label>
-                    	<label id"Lille" class="btn btn-default">
-                    		<input class="townLabel" name="townLabel" type="checkbox" autocomplete="off"> Lille	
-                    	</label>
-                    	<label id"Lyon" class="btn btn-default">
-                    		<input class="townLabel" name="townLabel" type="checkbox" autocomplete="off"> Lyon
-                    	</label>
-                    	<label id="Rennes" class="btn btn-default">
-                    		<input class="townLabel" name="townLabel" type="checkbox" autocomplete="off"> Rennes
-                    	</label>
-                    	<label id="Nantes" class="btn btn-default active">
-                    		<input class="townLabel" name="townLabel" type="checkbox" autocomplete="off"> Nantes	
-                    	</label>
-                    	<label id="Bordeaux" class="btn btn-default">
-                    		<input class="townLabel" name="townLabel" type="checkbox" autocomplete="off"> Bordeaux
-                    	</label>
-                    	<label id="Toulouse" class="btn btn-default">
-                    		<input class="townLabel" name="townLabel" type="checkbox" autocomplete="off"> Toulouse
-                    	</label>
-                    </div>
-                    <!--
-                    <div class="col-xs-4 col-xs-offset-2">
-                    	<ul class="list-unstyled">
-				       		<li class="townLabel2">Marseille</li>
-	                    	<li class="townLabel2">Grenoble</li>
-	                    	<li class="townLabel2">Montpellier</li>
-	                    	<li class="townLabel2">Lille</li>
-	                    	<li class="townLabel2">Lyon</li>
-	                    	<li class="townLabel2">Rennes</li>
-	                    	<li class="townLabel2">Nantes</li>
-	                    	<li class="townLabel2">Bordeaux</li>
-	                    	<li class="townLabel2">Toulouse</li>
-	                    </ul>
-                    </div>
-                    -->
-			      </div>
-			    </div>
-			  </div>
-			  <div class="panel panel-default">
-			    <div class="panel-heading" role="tab" id="headingTwo">
-			      <h5 class="panel-title">
+					</div>
+					<div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+						<div class="panel-body townChoice">
+							<div class="towns" data-toggle="buttons">
+								<label id="Marseille" class="btn btn-default active">
+									<input class="townLabel" name="townLabel" type="checkbox" autocomplete="off" checked> Marseille
+								</label>
+								<label id="Grenoble" class="btn btn-default">
+									<input class="townLabel" name="townLabel" type="checkbox" autocomplete="off"> Grenoble
+								</label>
+								<label id="Montpellier" class="btn btn-default">
+									<input class="townLabel" name="townLabel" type="checkbox" autocomplete="off"> Montpellier
+								</label>
+								<label id="Lille" class="btn btn-default">
+									<input class="townLabel" name="townLabel" type="checkbox" autocomplete="off"> Lille
+								</label>
+								<label id="Lyon" class="btn btn-default">
+									<input class="townLabel" name="townLabel" type="checkbox" autocomplete="off"> Lyon
+								</label>
+								<label id="Rennes" class="btn btn-default">
+									<input class="townLabel" name="townLabel" type="checkbox" autocomplete="off"> Rennes
+								</label>
+								<label id="Nantes" class="btn btn-default active">
+									<input class="townLabel" name="townLabel" type="checkbox" autocomplete="off"> Nantes
+								</label>
+								<label id="Bordeaux" class="btn btn-default">
+									<input class="townLabel" name="townLabel" type="checkbox" autocomplete="off"> Bordeaux
+								</label>
+								<label id="Toulouse" class="btn btn-default">
+									<input class="townLabel" name="townLabel" type="checkbox" autocomplete="off"> Toulouse
+								</label>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="panel panel-default">
+					<div class="panel-heading" role="tab" id="headingTwo">
+						<h5 class="panel-title">
 			        <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
 			          Choix de l'année
 			        </a>
 			      </h5>
-			    </div>
-			    <div id="collapseTwo" class="panel-collapse collapsing" role="tabpanel" aria-labelledby="headingTwo">
-			      <div class="panel-body">
-				    <input type="text" class="span2" value="" data-slider-min="2008" data-slider-max="2014" data-slider-step="1" data-slider-value="2008"  id="sl1" >
-			      </div>
-			    </div>
-			  </div>
-			  <div class="panel panel-default">
-			    <div class="panel-heading" role="tab" id="headingThree">
-			      <h5 class="panel-title">
+					</div>
+					<div id="collapseTwo" class="panel-collapse collapsing" role="tabpanel" aria-labelledby="headingTwo">
+						<div class="panel-body">
+							<input type="text" class="span2" value="" data-slider-min="2008" data-slider-max="2014" data-slider-step="1" data-slider-value="2008" id="sl1">
+						</div>
+					</div>
+				</div>
+				<div class="panel panel-default">
+					<div class="panel-heading" role="tab" id="headingThree">
+						<h5 class="panel-title">
 			        <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
 			          Critères
 			        </a>
 			      </h5>
-			    </div>
-			    <div id="collapseThree" class="panel-collapse collapsing" role="tabpanel" aria-labelledby="headingThree">
-			      <div class="panel-body criteria" role="group" data-toggle="buttons">
-			        	<label class="btn btn-default active">
-			        		<input class="NAF" type="checkbox" autocomplete="off" checked> NAF1 
-			        	</label>
-                    	<label class="btn btn-default">
-                    		<input class="NAF" type="checkbox" autocomplete="off"> NAF2
-                    	</label>
-                    	<label class="btn btn-default">
-                    		<input class="NAF" type="checkbox" autocomplete="off"> NAF3
-                    	</label>
-                    	<label class="btn btn-default">
-                    		<input class="NAF" type="checkbox" autocomplete="off"> NAF4	
-                    	</label>
-                    	<label class="btn btn-default">
-                    		<input class="NAF" type="checkbox" autocomplete="off"> NAF5
-                    	</label>
-                    	<label class="btn btn-default">
-                    		<input class="NAF" type="checkbox" autocomplete="off"> NAF6
-                    	</label>
-                    	<label class="btn btn-default">
-                    		<input class="NAF" type="checkbox" autocomplete="off"> NAF7	
-                    	</label>
-                    	<label class="btn btn-default">
-                    		<input class="NAF" type="checkbox" autocomplete="off"> NAF8
-                    	</label>
-			      </div>
-			    </div>
-			  </div>
+					</div>
+					<div id="collapseThree" class="panel-collapse collapsing" role="tabpanel" aria-labelledby="headingThree">
+						<div class="panel-body criteria" role="group" data-toggle="buttons">
+							<label id="26.20Z" class="btn btn-default active" title="Fabrication d'ordinateurs et d'équipements périphériques">
+								<input class="NAF" type="checkbox" autocomplete="off" checked> 26.20Z
+							</label>
+							<label id="26.30Z" class="btn btn-default active" title="Fabrication d'équipements de communication">
+								<input class="NAF" type="checkbox" autocomplete="off"> 26.30Z
+							</label>
+							<label id="46.18Z" class="btn btn-default active" title="Intermédiaires spécialisés dans le commerce d'autres produits spécifiques">
+								<input class="NAF" type="checkbox" autocomplete="off"> 46.18Z
+							</label>
+							<label id="46.51Z" class="btn btn-default active" title="Commerce de gros d'ordinateurs, d'équipements informatiques périphériques et de logiciels">
+								<input class="NAF" type="checkbox" autocomplete="off"> 46.51Z
+							</label>
+							<label id="46.52Z" class="btn btn-default" title="Commerce de gros de composants et d'équipements électroniques et de télécommunication">
+								<input class="NAF" type="checkbox" autocomplete="off"> 46.52Z
+							</label>
+							<label id="47.42Z" class="btn btn-default" title="Commerce de détail de matériels de télécommunication en magasin spécialisé">
+								<input class="NAF" type="checkbox" autocomplete="off"> 47.42Z
+							</label>
+							<label id="58.11Z" class="btn btn-default" title="Edition de livres">
+								<input class="NAF" type="checkbox" autocomplete="off"> 58.11Z
+							</label>
+							<label id="58.14Z" class="btn btn-default" title="Édition de revues et périodiques">
+								<input class="NAF" type="checkbox" autocomplete="off"> 58.14Z
+							</label>
+							<label id="58.19Z" class="btn btn-default" title="Autres activités d'édition">
+								<input class="NAF" type="checkbox" autocomplete="off"> 58.19Z
+							</label>
+							<label id="58.21Z" class="btn btn-default" title="Edition de jeux électroniques">
+								<input class="NAF" type="checkbox" autocomplete="off"> 58.21Z
+							</label>
+							<label id="58.29A" class="btn btn-default" title="Edition de logiciels système et de réseau">
+								<input class="NAF" type="checkbox" autocomplete="off"> 58.29A
+							</label>
+							<label id="58.29B" class="btn btn-default" title="Edition de logiciels outils de développement et de langages">
+								<input class="NAF" type="checkbox" autocomplete="off"> 58.29B
+							</label>
+							<label id="58.29C" class="btn btn-default" title="Edition de logiciels applicatifs">
+								<input class="NAF" type="checkbox" autocomplete="off"> 58.29C
+							</label>
+							<label id="59.11A" class="btn btn-default" title="Production de films et de programmes pour la télévision">
+								<input class="NAF" type="checkbox" autocomplete="off"> 59.11A
+							</label>
+							<label id="59.11B" class="btn btn-default" title="Production de films institutionnels et publicitaires">
+								<input class="NAF" type="checkbox" autocomplete="off"> 59.11B
+							</label>
+							<label id="59.11C" class="btn btn-default" title="Production de films pour le cinéma">
+								<input class="NAF" type="checkbox" autocomplete="off"> 59.11C
+							</label>
+							<label id="59.12Z" class="btn btn-default" title="Post-production de films cinématographiques, de vidéo et de programmes de télévision">
+								<input class="NAF" type="checkbox" autocomplete="off"> 59.12Z
+							</label>
+							<label id="59.20Z" class="btn btn-default" title="Enregistrement sonore et édition musicale">
+								<input class="NAF" type="checkbox" autocomplete="off"> 59.20Z
+							</label>
+							<label id="61.10Z" class="btn btn-default" title="Télécommunications filaires">
+								<input class="NAF" type="checkbox" autocomplete="off"> 61.10Z
+							</label>
+							<label id="61.20Z" class="btn btn-default" title="Télécommunications sans fil">
+								<input class="NAF" type="checkbox" autocomplete="off"> 61.20Z
+							</label>
+							<label id="61.30Z" class="btn btn-default" title="Télécommunications par satellite">
+								<input class="NAF" type="checkbox" autocomplete="off"> 61.30Z
+							</label>
+							<label id="61.90Z" class="btn btn-default" title="autres activités de télécommunication">
+								<input class="NAF" type="checkbox" autocomplete="off"> 61.90Z
+							</label>
+							<label id="62.01Z" class="btn btn-default" title="Programmation informatique">
+								<input class="NAF" type="checkbox" autocomplete="off"> 62.01Z
+							</label>
+							<label id="62.02A" class="btn btn-default" title="Conseil en systèmes et logiciels informatiques">
+								<input class="NAF" type="checkbox" autocomplete="off"> 62.02A
+							</label>
+							<label id="62.02B" class="btn btn-default" title="Tierce maintenance de systèmes et d'applications informatiques">
+								<input class="NAF" type="checkbox" autocomplete="off"> 62.02B
+							</label>
+							<label id="62.03Z" class="btn btn-default" title="Gestion d'installations informatiques">
+								<input class="NAF" type="checkbox" autocomplete="off"> 62.03Z
+							</label>
+							<label id="62.09Z" class="btn btn-default" title="Autres activités informatiques">
+								<input class="NAF" type="checkbox" autocomplete="off"> 62.09Z
+							</label>
+							<label id="63.11Z" class="btn btn-default" title="Traitement de données, hébergement et activités connexes">
+								<input class="NAF" type="checkbox" autocomplete="off"> 63.11Z
+							</label>
+							<label id="63.12Z" class="btn btn-default" title="Portails internet">
+								<input class="NAF" type="checkbox" autocomplete="off"> 63.12Z
+							</label>
+							<label id="70.21Z" class="btn btn-default" title="Conseil en relations publiques et communication">
+								<input class="NAF" type="checkbox" autocomplete="off"> 70.21Z
+							</label>
+							<label id="70.22Z" class="btn btn-default" title="Conseil pour les affaires et autres conseils de gestion">
+								<input class="NAF" type="checkbox" autocomplete="off"> 70.22Z
+							</label>
+							<label id="73.11Z" class="btn btn-default" title="Activités des agences de publicité">
+								<input class="NAF" type="checkbox" autocomplete="off"> 73.11Z
+							</label>
+							<label id="73.12Z" class="btn btn-default" title="Régie publicitaire de médias">
+								<input class="NAF" type="checkbox" autocomplete="off"> 73.12Z
+							</label>
+							<label id="77.39Z" class="btn btn-default" title="Location et location-bail d'autres machines, équipements et biens matériels n.c.a.">
+								<input class="NAF" type="checkbox" autocomplete="off"> 77.39Z
+							</label>
+							<label id="95.11Z" class="btn btn-default" title="Réparation d'ordinateurs et d'équipements périphériques">
+								<input class="NAF" type="checkbox" autocomplete="off"> 95.11Z
+							</label>
+							<label id="95.12Z" class="btn btn-default" title="Réparation d'équipements de communication">
+								<input class="NAF" type="checkbox" autocomplete="off"> 95.12Z
+							</label>
+						</div>
+					</div>
+				</div>
 			</div>
-        </div><!-- #sidebar-wrapper-->
+		</div>
+		<!-- #sidebar-wrapper-->
 
-	    <div id="page-content-wrapper">
-	    	<a href="#menu-toggle" class="btn btn-default" id="menu-toggle">
-	    		<span class="glyphicon glyphicon-align-justify"></span>
-	    	</a>
-	    	<div class="row">
-		        <div class="city col-xs-6 col-md-6 col-lg-6">
-		            <div class="well col-md-offset-1 col-md-10">
-		            	<h4 id="city1">Marseille</h4>
-		            </div>
-		        </div>
-		        <div class="city col-xs-6 col-md-6 col-lg-6">
-		            <div class="well col-md-offset-1 col-md-10">
-		           		<h4 id="city2">Nantes</h4>
-		           	</div>
-		        </div>
-		    </div>
-	    </div><!-- #page-content-wrapper"-->
+		<div id="page-content-wrapper">
+			<a href="#menu-toggle" class="btn btn-default" id="menu-toggle">
+				<span class="glyphicon glyphicon-align-justify"></span>
+			</a>
+			<div class="row">
+				<div class="city col-xs-6 col-md-6 col-lg-6">
+					<div class="well col-md-offset-1 col-md-10">
+						<h4 id="city1">Marseille</h4>
+					</div>
+				</div>
+				<div class="city col-xs-6 col-md-6 col-lg-6">
+					<div class="well col-md-offset-1 col-md-10">
+						<h4 id="city2">Nantes</h4>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- #page-content-wrapper"-->
 
-	</div><!-- #wrapper -->
+	</div>
+	<!-- #wrapper -->
 </div>
