cette fois ça marche vraimment, slide 1 et 2 faites (manque adaptation grand et petits écrans)

--- a/le_journal_des_entreprises/html/layout.html
+++ b/le_journal_des_entreprises/html/layout.html
@@ -12,15 +12,12 @@
     <!--<div class="container-fluid">-->
         {% include "./intro.html" %}
         {% include "./dataviz1.html" %}
-        {% include "./comparatif.html" %}
+    <!--   {% include "./comparatif.html" %}-->
         {% include "./outro.html" %}
     <!--</div>-->
     <script type="text/javascript" src="/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="/bootstrap/dist/bootstrap.min.js"></script>
 
-    <script type="text/javascript" src="/js/parallax.js"></script>
-    <script type="text/javascript" src="/js/jquery.localscroll-min.js"></script>
-	<script type="text/javascript" src="/js/jquery.scrollTo-min.js"></script>
     <script type="text/javascript" src="/js/scroll.js"></script>
     <script type="text/javascript" src="/js/bootstrap-slider.js"></script>
     <script type="text/javascript" src="/js/battle.js"></script>
