--- a/le_journal_des_entreprises/html/comparatif.html
+++ b/le_journal_des_entreprises/html/comparatif.html
@@ -14,8 +14,8 @@
 					<div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
 						<div class="panel-body townChoice">
 							<div class="towns" data-toggle="buttons">
-								<label id="Marseille" class="btn btn-default active">
-									<input class="townLabel" name="townLabel" type="checkbox" autocomplete="off" checked> Marseille
+								<label id="Aix-Marseille" class="btn btn-default active">
+									<input class="townLabel" name="townLabel" type="checkbox" autocomplete="off" disabled="disabled"> Aix-Marseille
 								</label>
 								<label id="Grenoble" class="btn btn-default">
 									<input class="townLabel" name="townLabel" type="checkbox" autocomplete="off"> Grenoble
@@ -53,9 +53,9 @@
 			        </a>
 			      </h5>
 					</div>
-					<div id="collapseTwo" class="panel-collapse collapsing" role="tabpanel" aria-labelledby="headingTwo">
+					<div id="collapseTwo" class="panel-collapse " role="tabpanel" aria-labelledby="headingTwo">
 						<div class="panel-body">
-							<input type="text" class="span2" value="" data-slider-min="2008" data-slider-max="2014" data-slider-step="1" data-slider-value="2008" id="sl1">
+							<input type="text" class="span2" value="" data-slider-min="2008" data-slider-max="2013" data-slider-step="1" data-slider-value="2008" id="sl1">
 						</div>
 					</div>
 				</div>
@@ -67,114 +67,114 @@
 			        </a>
 			      </h5>
 					</div>
-					<div id="collapseThree" class="panel-collapse collapsing" role="tabpanel" aria-labelledby="headingThree">
+					<div id="collapseThree" class="panel-collapse " role="tabpanel" aria-labelledby="headingThree">
 						<div class="panel-body criteria" role="group" data-toggle="buttons">
-							<label id="26.20Z" class="btn btn-default active" title="Fabrication d'ordinateurs et d'équipements périphériques">
-								<input class="NAF" type="checkbox" autocomplete="off" checked> 26.20Z
+							<label id="26_20Z" class="btn btn-default active" title="Fabrication d'ordinateurs et d'équipements périphériques">
+								<input class="NAF" type="checkbox" autocomplete="off" > 26.20Z
 							</label>
-							<label id="26.30Z" class="btn btn-default active" title="Fabrication d'équipements de communication">
+							<label id="26_30Z" class="btn btn-default active" title="Fabrication d'équipements de communication">
 								<input class="NAF" type="checkbox" autocomplete="off"> 26.30Z
 							</label>
-							<label id="46.18Z" class="btn btn-default active" title="Intermédiaires spécialisés dans le commerce d'autres produits spécifiques">
+							<label id="46_18Z" class="btn btn-default active" title="Intermédiaires spécialisés dans le commerce d'autres produits spécifiques">
 								<input class="NAF" type="checkbox" autocomplete="off"> 46.18Z
 							</label>
-							<label id="46.51Z" class="btn btn-default active" title="Commerce de gros d'ordinateurs, d'équipements informatiques périphériques et de logiciels">
+							<label id="46_51Z" class="btn btn-default" title="Commerce de gros d'ordinateurs, d'équipements informatiques périphériques et de logiciels">
 								<input class="NAF" type="checkbox" autocomplete="off"> 46.51Z
 							</label>
-							<label id="46.52Z" class="btn btn-default" title="Commerce de gros de composants et d'équipements électroniques et de télécommunication">
+							<label id="46_52Z" class="btn btn-default" title="Commerce de gros de composants et d'équipements électroniques et de télécommunication">
 								<input class="NAF" type="checkbox" autocomplete="off"> 46.52Z
 							</label>
-							<label id="47.42Z" class="btn btn-default" title="Commerce de détail de matériels de télécommunication en magasin spécialisé">
+							<label id="47_42Z" class="btn btn-default" title="Commerce de détail de matériels de télécommunication en magasin spécialisé">
 								<input class="NAF" type="checkbox" autocomplete="off"> 47.42Z
 							</label>
-							<label id="58.11Z" class="btn btn-default" title="Edition de livres">
+							<label id="58_11Z" class="btn btn-default" title="Edition de livres">
 								<input class="NAF" type="checkbox" autocomplete="off"> 58.11Z
 							</label>
-							<label id="58.14Z" class="btn btn-default" title="Édition de revues et périodiques">
+							<label id="58_14Z" class="btn btn-default" title="Édition de revues et périodiques">
 								<input class="NAF" type="checkbox" autocomplete="off"> 58.14Z
 							</label>
-							<label id="58.19Z" class="btn btn-default" title="Autres activités d'édition">
+							<label id="58_19Z" class="btn btn-default" title="Autres activités d'édition">
 								<input class="NAF" type="checkbox" autocomplete="off"> 58.19Z
 							</label>
-							<label id="58.21Z" class="btn btn-default" title="Edition de jeux électroniques">
+							<label id="58_21Z" class="btn btn-default" title="Edition de jeux électroniques">
 								<input class="NAF" type="checkbox" autocomplete="off"> 58.21Z
 							</label>
-							<label id="58.29A" class="btn btn-default" title="Edition de logiciels système et de réseau">
+							<label id="58_29A" class="btn btn-default" title="Edition de logiciels système et de réseau">
 								<input class="NAF" type="checkbox" autocomplete="off"> 58.29A
 							</label>
-							<label id="58.29B" class="btn btn-default" title="Edition de logiciels outils de développement et de langages">
+							<label id="58_29B" class="btn btn-default" title="Edition de logiciels outils de développement et de langages">
 								<input class="NAF" type="checkbox" autocomplete="off"> 58.29B
 							</label>
-							<label id="58.29C" class="btn btn-default" title="Edition de logiciels applicatifs">
+							<label id="58_29C" class="btn btn-default" title="Edition de logiciels applicatifs">
 								<input class="NAF" type="checkbox" autocomplete="off"> 58.29C
 							</label>
-							<label id="59.11A" class="btn btn-default" title="Production de films et de programmes pour la télévision">
+							<label id="59_11A" class="btn btn-default" title="Production de films et de programmes pour la télévision">
 								<input class="NAF" type="checkbox" autocomplete="off"> 59.11A
 							</label>
-							<label id="59.11B" class="btn btn-default" title="Production de films institutionnels et publicitaires">
+							<label id="59_11B" class="btn btn-default" title="Production de films institutionnels et publicitaires">
 								<input class="NAF" type="checkbox" autocomplete="off"> 59.11B
 							</label>
-							<label id="59.11C" class="btn btn-default" title="Production de films pour le cinéma">
+							<label id="59_11C" class="btn btn-default" title="Production de films pour le cinéma">
 								<input class="NAF" type="checkbox" autocomplete="off"> 59.11C
 							</label>
-							<label id="59.12Z" class="btn btn-default" title="Post-production de films cinématographiques, de vidéo et de programmes de télévision">
+							<label id="59_12Z" class="btn btn-default" title="Post-production de films cinématographiques, de vidéo et de programmes de télévision">
 								<input class="NAF" type="checkbox" autocomplete="off"> 59.12Z
 							</label>
-							<label id="59.20Z" class="btn btn-default" title="Enregistrement sonore et édition musicale">
+							<label id="59_20Z" class="btn btn-default" title="Enregistrement sonore et édition musicale">
 								<input class="NAF" type="checkbox" autocomplete="off"> 59.20Z
 							</label>
-							<label id="61.10Z" class="btn btn-default" title="Télécommunications filaires">
+							<label id="61_10Z" class="btn btn-default" title="Télécommunications filaires">
 								<input class="NAF" type="checkbox" autocomplete="off"> 61.10Z
 							</label>
-							<label id="61.20Z" class="btn btn-default" title="Télécommunications sans fil">
+							<label id="61_20Z" class="btn btn-default" title="Télécommunications sans fil">
 								<input class="NAF" type="checkbox" autocomplete="off"> 61.20Z
 							</label>
-							<label id="61.30Z" class="btn btn-default" title="Télécommunications par satellite">
+							<label id="61_30Z" class="btn btn-default" title="Télécommunications par satellite">
 								<input class="NAF" type="checkbox" autocomplete="off"> 61.30Z
 							</label>
-							<label id="61.90Z" class="btn btn-default" title="autres activités de télécommunication">
+							<label id="61_90Z" class="btn btn-default" title="autres activités de télécommunication">
 								<input class="NAF" type="checkbox" autocomplete="off"> 61.90Z
 							</label>
-							<label id="62.01Z" class="btn btn-default" title="Programmation informatique">
+							<label id="62_01Z" class="btn btn-default" title="Programmation informatique">
 								<input class="NAF" type="checkbox" autocomplete="off"> 62.01Z
 							</label>
-							<label id="62.02A" class="btn btn-default" title="Conseil en systèmes et logiciels informatiques">
+							<label id="62_02A" class="btn btn-default" title="Conseil en systèmes et logiciels informatiques">
 								<input class="NAF" type="checkbox" autocomplete="off"> 62.02A
 							</label>
-							<label id="62.02B" class="btn btn-default" title="Tierce maintenance de systèmes et d'applications informatiques">
+							<label id="62_02B" class="btn btn-default" title="Tierce maintenance de systèmes et d'applications informatiques">
 								<input class="NAF" type="checkbox" autocomplete="off"> 62.02B
 							</label>
-							<label id="62.03Z" class="btn btn-default" title="Gestion d'installations informatiques">
+							<label id="62_03Z" class="btn btn-default" title="Gestion d'installations informatiques">
 								<input class="NAF" type="checkbox" autocomplete="off"> 62.03Z
 							</label>
-							<label id="62.09Z" class="btn btn-default" title="Autres activités informatiques">
+							<label id="62_09Z" class="btn btn-default" title="Autres activités informatiques">
 								<input class="NAF" type="checkbox" autocomplete="off"> 62.09Z
 							</label>
-							<label id="63.11Z" class="btn btn-default" title="Traitement de données, hébergement et activités connexes">
+							<label id="63_11Z" class="btn btn-default" title="Traitement de données, hébergement et activités connexes">
 								<input class="NAF" type="checkbox" autocomplete="off"> 63.11Z
 							</label>
-							<label id="63.12Z" class="btn btn-default" title="Portails internet">
+							<label id="63_12Z" class="btn btn-default" title="Portails internet">
 								<input class="NAF" type="checkbox" autocomplete="off"> 63.12Z
 							</label>
-							<label id="70.21Z" class="btn btn-default" title="Conseil en relations publiques et communication">
+							<label id="70_21Z" class="btn btn-default" title="Conseil en relations publiques et communication">
 								<input class="NAF" type="checkbox" autocomplete="off"> 70.21Z
 							</label>
-							<label id="70.22Z" class="btn btn-default" title="Conseil pour les affaires et autres conseils de gestion">
+							<label id="70_22Z" class="btn btn-default" title="Conseil pour les affaires et autres conseils de gestion">
 								<input class="NAF" type="checkbox" autocomplete="off"> 70.22Z
 							</label>
-							<label id="73.11Z" class="btn btn-default" title="Activités des agences de publicité">
+							<label id="73_11Z" class="btn btn-default" title="Activités des agences de publicité">
 								<input class="NAF" type="checkbox" autocomplete="off"> 73.11Z
 							</label>
-							<label id="73.12Z" class="btn btn-default" title="Régie publicitaire de médias">
+							<label id="73_12Z" class="btn btn-default" title="Régie publicitaire de médias">
 								<input class="NAF" type="checkbox" autocomplete="off"> 73.12Z
 							</label>
-							<label id="77.39Z" class="btn btn-default" title="Location et location-bail d'autres machines, équipements et biens matériels n.c.a.">
+							<label id="77_39Z" class="btn btn-default" title="Location et location-bail d'autres machines, équipements et biens matériels n.c.a.">
 								<input class="NAF" type="checkbox" autocomplete="off"> 77.39Z
 							</label>
-							<label id="95.11Z" class="btn btn-default" title="Réparation d'ordinateurs et d'équipements périphériques">
+							<label id="95_11Z" class="btn btn-default" title="Réparation d'ordinateurs et d'équipements périphériques">
 								<input class="NAF" type="checkbox" autocomplete="off"> 95.11Z
 							</label>
-							<label id="95.12Z" class="btn btn-default" title="Réparation d'équipements de communication">
+							<label id="95_12Z" class="btn btn-default" title="Réparation d'équipements de communication">
 								<input class="NAF" type="checkbox" autocomplete="off"> 95.12Z
 							</label>
 						</div>
@@ -191,12 +191,17 @@
 			<div class="row">
 				<div class="city col-xs-6 col-md-6 col-lg-6">
 					<div class="well col-md-offset-1 col-md-10">
-						<h4 id="city1">Marseille</h4>
+						<h4 id="city1">Aix-Marseille</h4>
+					</div>
+					<div class="tab0 well col-md-offset-1 col-md-10">
+						
 					</div>
 				</div>
 				<div class="city col-xs-6 col-md-6 col-lg-6">
 					<div class="well col-md-offset-1 col-md-10">
 						<h4 id="city2">Nantes</h4>
+					</div>
+					<div class="tab1 well col-md-offset-1 col-md-10">
 					</div>
 				</div>
 			</div>
