--- a/le_journal_des_entreprises/html/comparatif.html
+++ b/le_journal_des_entreprises/html/comparatif.html
@@ -190,18 +190,18 @@
 			</a>
 			<div class="row">
 				<div class="city col-xs-6 col-md-6 col-lg-6">
-					<div class="well col-md-offset-1 col-md-10">
+					<div class="well col-xs-12 col-md-offset-1 col-md-10 col-lg-offset-1 col-lg-10">
 						<h4 id="city1">Aix-Marseille</h4>
 					</div>
-					<div class="tab0 well col-md-offset-1 col-md-10">
+					<div id="truc" class="tab0 well col-xs-12 col-md-offset-1 col-md-10 col-lg-offset-1 col-lg-10">
 						
 					</div>
 				</div>
 				<div class="city col-xs-6 col-md-6 col-lg-6">
-					<div class="well col-md-offset-1 col-md-10">
+					<div class="well col-xs-12 col-md-offset-1 col-md-10 col-lg-offset-1 col-lg-10">
 						<h4 id="city2">Nantes</h4>
 					</div>
-					<div class="tab1 well col-md-offset-1 col-md-10">
+					<div id="truc" class="tab1 well col-xs-12 col-md-offset-1 col-md-10 col-lg-offset-1 col-lg-10">
 					</div>
 				</div>
 			</div>
