--- a/le_journal_des_entreprises/html/layout.html
+++ b/le_journal_des_entreprises/html/layout.html
@@ -7,18 +7,20 @@
     <link rel="stylesheet" type="text/css" href="/css/styleintro.css" />
     <link rel="stylesheet" href="/css/sidebar.css" type="text/css" />
     <link rel="stylesheet" href="/css/slider.css" type="text/css" />
+    <link rel="stylesheet" href="/css/dataviz1.css" type="text/css" />
 </head>
 <body>
     <!--<div class="container-fluid">-->
         {% include "./intro.html" %}
         {% include "./dataviz1.html" %}
-    <!--   {% include "./comparatif.html" %}-->
+     <!--   {% include "./comparatif.html" %}-->
         {% include "./outro.html" %}
     <!--</div>-->
     <script type="text/javascript" src="/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="/bootstrap/dist/bootstrap.min.js"></script>
 
     <script type="text/javascript" src="/js/scroll.js"></script>
+     <script type="text/javascript" src="/js/dataviz1.js"></script>
     <script type="text/javascript" src="/js/bootstrap-slider.js"></script>
     <script type="text/javascript" src="/js/battle.js"></script>
 
