add css to interactive tab

--- a/le_journal_des_entreprises/html/layout.html
+++ b/le_journal_des_entreprises/html/layout.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="/css/sidebar.css" type="text/css" />
     <link rel="stylesheet" href="/css/slider.css" type="text/css" />
     <link rel="stylesheet" type="text/css" href="/css/styleintro.css" />
+    <link rel="stylesheet" type="text/css" href="/css/interactiveTab.css" />
 
 </head>
 <body>
