--- a/le_journal_des_entreprises/html/layout.html
+++ b/le_journal_des_entreprises/html/layout.html
@@ -20,7 +20,10 @@
     <script type="text/javascript" src="/bootstrap/dist/bootstrap.min.js"></script>
 
     <script type="text/javascript" src="/js/scroll.js"></script>
-     <script type="text/javascript" src="/js/dataviz1.js"></script>
+    
+    <script type="text/javascript" src="js/highcharts-min.js"></script>
+    <script type="text/javascript" src="/js/dataviz1.js"></script>
+     
     <script type="text/javascript" src="/js/bootstrap-slider.js"></script>
     <script type="text/javascript" src="/js/battle.js"></script>
 
